# gnome-dictionary

./: .gitattributes  .gitlab-ci.yml  Makefile.am  NEWS  README.md  autogen.sh  configure  configure.ac  gnome-dictionary.doap  meson.build  meson_options.txt
build-aux/: make_release.sh  post-install.sh
build-aux/flatpak/: org.gnome.Dictionary.json
data/: Makefile.am  default.desktop.in  gnome-dictionary.xml  meson.build  org.gnome.Dictionary.appdata.xml.in  org.gnome.Dictionary.appdata.xml.in.in  org.gnome.Dictionary.desktop.in  org.gnome.Dictionary.desktop.in.in  org.gnome.Dictionary.json  org.gnome.Dictionary.service.in  org.gnome.dictionary.gschema.xml  spanish.desktop.in  thai.desktop.in
data/appdata/: meson.build  org.gnome.Dictionary.appdata.xml.in.in
data/icons/: meson.build
docs/: Makefile.am
help/: LINGUAS  meson.build
help/C/: introduction.page  keyboard-shortcuts.page  print.page  save-definition.page
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/ko/: ko.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/sv/: sv.po
help/uk/: uk.po
libgdict/: Makefile.am  gdict-client-context.c  gdict-context.c  gdict-database-chooser-button.c  gdict-database-chooser.c  gdict-defbox.c  gdict-source-chooser.c  gdict-source-loader.c  gdict-source.c  gdict-utils.c  gdict-utils.h  meson.build
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  be.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  meson.build  mjw.po  ml.po  ms.po  nb.po  nl.po  oc.po  pa.po  (+14 more)
src/: Makefile.am  gdict-about.c  gdict-app-menus.ui  gdict-app.c  gdict-app.h  gdict-client-context.c  gdict-client-context.h  gdict-common.c  gdict-common.h  gdict-help-overlay.ui  gdict-pref-dialog.c  gdict-pref-dialog.h  gdict-print.c  gdict-print.h  gdict-sidebar.c  gdict-source-dialog.c  gdict-source-dialog.h  gdict-source-dialog.ui  gdict-speller.c  gdict-strategy-chooser.c  gdict-utils.c  gdict-window.c  gdict-window.h  gdict.gresource.xml  gdict.h  main.c  meson.build
