gnome.yelp('gnome-dictionary',
           sources: [
             'definition.page',
             'dictionary-select.page',
             'find.page',
             'index.page',
             'introduction.page',
             'keyboard-shortcuts.page',
             'legal.xml',
             'pref.page',
             'print-font.page',
             'print.page',
             'prob-retrieving-definition.page',
             'save-definition.page',
             'similar-words.page',
             'source-add-local.page',
             'sources-default.page',
             'sources-delete.page',
             'sources-edit.page',
             'sources.page',
             'sources-select.page',
             'text-copy.page',
           ],
           media: [
             'figures/gnome-dictionary-icon.png',
             'figures/gnome-dictionary.png',
           ],
           languages: [
             'ca',
             'cs',
             'da',
             'de',
             'el',
             'en_GB',
             'es',
             'eu',
             'fi',
             'fr',
             'gl',
             'hu',
             'id',
             'it',
             'ko',
             'oc',
             'pt_BR',
             'ru',
             'sl',
             'sv',
             'uk',
             'zh_CN',
           ])
