gnome.yelp('gnome-dictionary',
  sources: [
    'definition.page',
    'dictionary-select.page',
    'find.page',
    'index.page',
    'introduction.page',
    'keyboard-shortcuts.page',
    'legal.xml',
    'pref.page',
    'print-font.page',
    'print.page',
    'prob-retrieving-definition.page',
    'save-definition.page',
    'similar-words.page',
    'source-add-local.page',
    'sources-default.page',
    'sources-delete.page',
    'sources-edit.page',
    'sources.page',
    'sources-select.page',
    'text-copy.page',
  ],
  media: [
    'figures/gnome-dictionary-icon.png',
    'figures/gnome-dictionary-3-26.png',
  ],
)
