install_data(
        'scalable/org.gnome.Dictionary.svg',
        install_dir : join_paths(
                get_option('prefix'),
                get_option('datadir'),
                'icons/hicolor/scalable/apps'
        )
)


install_data(
        'symbolic/org.gnome.Dictionary-symbolic.svg',
        install_dir : join_paths(
                get_option('prefix'),
                get_option('datadir'),
                'icons/hicolor/symbolic/apps'
        )
)
